--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,13 @@
-GEMINI_API_KEY=your_gemini_api_key_here
+# AI Provider - Choose one (or both for fallback)
+# Option 1: Groq (FREE cloud API - recommended for deployment)
+# Get your free key at https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.3-70b-versatile
+
+# Option 2: Ollama (FREE local AI - great for development)
+# Install from https://ollama.com then run: ollama pull llama3.2:3b
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2:3b
+
+# Server
 PORT=3003
